# ishara-backend

./: pyproject.toml  requirements.txt
app/: main.py
app/routers/: gloss.py
app/utils/: config.py
